<resources>
    <string name="app_name">Reminder</string>
    <string name="title_activity_maps">Map</string>

    <string name="dialog_create_event_hint_title">title</string>
    <string name="dialog_create_event_hint_date">date</string>
    <string name="dialog_create_event_hint_time_from">from</string>
    <string name="dialog_create_event_hint_time_to">to</string>
    <string name="dialog_create_event_hint_description">description</string>
    <string name="dialog_create_event_time_decorator">-</string>

    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_create">Create</string>
    <string name="dialog_detail_event_time_decorator">-</string>
    <string name="button_text_delete">Delete</string>
    <string name="button_text_edit">Edit</string>
    <string name="button_text_ok">Ok</string>
    <string name="dialog_create_event_fail_validation">Need to fill all fields</string>
</resources>
