<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:padding="@dimen/padding_medium">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_create_event_hint_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_create_event_hint_date"
        app:layout_constraintTop_toBottomOf="@id/et_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_time_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_create_event_hint_time_from"
        app:layout_constraintTop_toBottomOf="@id/et_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_time_decorator"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_time_decorator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:text="@string/dialog_create_event_time_decorator"
        app:layout_constraintTop_toTopOf="@id/et_time_from"
        app:layout_constraintStart_toEndOf="@id/et_time_from"
        app:layout_constraintEnd_toStartOf="@id/et_time_to"
        app:layout_constraintBottom_toBottomOf="@id/et_time_from"/>

    <EditText
        android:id="@+id/et_time_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_create_event_hint_time_to"
        app:layout_constraintStart_toEndOf="@id/tv_time_decorator"
        app:layout_constraintTop_toTopOf="@id/et_time_from"/>

    <EditText
        android:id="@+id/et_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_create_event_hint_description"
        app:layout_constraintTop_toBottomOf="@id/et_time_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_cancel"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_description"
        app:layout_constraintEnd_toStartOf="@+id/btn_create"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_create"
        android:layout_marginStart="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_cancel"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>