<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:padding="@dimen/padding_medium">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_delete"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_extra_small"
        android:src="@drawable/ic_delete"
        android:tint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_time_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_time_decorator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_detail_event_time_decorator"
        android:layout_marginStart="@dimen/margin_extra_small"
        android:layout_marginEnd="@dimen/margin_extra_small"
        app:layout_constraintStart_toEndOf="@id/tv_time_from"
        app:layout_constraintEnd_toStartOf="@id/tv_time_to"
        app:layout_constraintTop_toTopOf="@id/tv_time_from"
        app:layout_constraintBottom_toBottomOf="@id/tv_time_from"/>

    <TextView
        android:id="@+id/tv_time_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_time_decorator"
        app:layout_constraintTop_toTopOf="@id/tv_time_decorator"
        app:layout_constraintBottom_toBottomOf="@id/tv_time_decorator"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/tv_time_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_edit"
        android:layout_marginEnd="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintEnd_toStartOf="@id/btn_ok"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_ok"
        app:layout_constraintTop_toTopOf="@id/btn_edit"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>